--- a/base/1525751434zfpehci1tw/text.html
+++ b/base/1525751434zfpehci1tw/text.html
@@ -13,6 +13,6 @@ p, li { white-space: pre-wrap; }
 <li style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">Мастер установки запрашивает подтверждение установки. Проверяем, жмём <span style=" font-weight:600;">F11</span>, чтобы начать установку.</li>
 <li style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">Происходит установка ESXi 6.0.0 (~1 минута).</li>
 <li style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">Установка завершена. Извлекаем загрузочный носитель. Жмем <span style=" font-weight:600;">Enter</span>, чтобы перезагрузить машину.</li>
-<li style="-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;"><br /></li></ol>
-<p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;"> </p>
+<li style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">После загрузки системы жмем F2, чтобы пройти аутентификацию. Вводим пароль пользователя root.</li>
+<li style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">Настраиваем сеть.</li></ol>
 <p style="-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;"><br /></p></body></html>
